Re-verificar ruta logo 6

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
           <!-- LÍNEA CRÍTICA PARA LOGO 6 -->
-          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
+          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
 
           <!-- COPIA EXACTA (Verificar cada línea) -->
           <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
@@ -203,7 +203,7 @@
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
           <!-- COPIA DE LÍNEA CRÍTICA PARA LOGO 6 -->
-          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
+          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
       </div>
   </div>
 </section>
