--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 
 <footer>
   <p>KREO IA Studio © 2025 | Todos los derechos reservados</p>
+  <p><Ficción IA: arte, sátira y humor. Parecido a la realidad es coincidencia.></p>
 </footer>
 
 <script>
