--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
     .contact-form input, .contact-form textarea { padding: 10px; border: none; border-radius: 5px; background: #2a2a2a; color: #fff; }
     .contact-form button { background: #ff6600; padding: 12px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer; }
     .contact-form button:hover { background: #ff8533; }
+
+    /* --- Estilos Footer --- */
     footer { text-align: center; padding: 30px 20px; background: #1c1c1c; color: #666; }
+    footer p { margin: 5px 0; /* Añade un pequeño margen entre párrafos */ }
+    /* --- Fin Estilos Footer --- */
+
     .reveal { opacity: 0; transform: translateY(20px); transition: opacity 1s ease, transform 1s ease; }
     .reveal.visible { opacity: 1; transform: none; }
     .fade-in { opacity: 0; transition: opacity 2s ease; }
@@ -182,28 +187,23 @@
   </div>
 </section>
 
-<!-- Sección de Logos Partners CORREGIDA -->
-<!-- Sección de Logos Partners CORREGIDA (Verificación Final) -->
+<!-- Sección de Logos Partners -->
 <section id="logo-strip" aria-labelledby="partners-heading">
   <div class="logo-marquee-container">
       <div class="logo-marquee-track">
-          <!-- LISTA DE LOGOS (Verificar cada línea) -->
           <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
           <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
           <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-          <!-- LÍNEA CRÍTICA PARA LOGO 6 -->
-          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
-
-          <!-- COPIA EXACTA (Verificar cada línea) -->
+          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo">
+          <!-- Copia -->
           <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
           <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
           <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-          <!-- COPIA DE LÍNEA CRÍTICA PARA LOGO 6 -->
-          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo"> <!-- ¿Es EXACTAMENTE así? -->
+          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo">
       </div>
   </div>
 </section>
@@ -220,7 +220,8 @@
 
 <footer>
   <p>KREO IA Studio © 2025 | Todos los derechos reservados</p>
-  <p><Ficción IA: arte, sátira y humor. Parecido a la realidad es coincidencia.></p>
+  <!-- Línea añadida -->
+  <p>Ficción IA: arte, sátira y humor. Parecido a la realidad es coincidencia.</p>
 </footer>
 
 <script>
