--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
           <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo">
+          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo">
           <!-- Copia -->
           <img src="images/Logo-Cliente-1.png" alt="Logo Cliente 1" class="partner-logo">
           <img src="images/Logo-Cliente-2.png" alt="Logo Cliente 2" class="partner-logo">
           <img src="images/Logo-Cliente-3.png" alt="Logo Cliente 3" class="partner-logo">
           <img src="images/Logo-Cliente-4.png" alt="Logo Cliente 4" class="partner-logo">
           <img src="images/Logo-Cliente-5.png" alt="Logo Cliente 5" class="partner-logo">
-          <img src="images/Logo-Cliente-6.jpeg" alt="Logo Cliente 6" class="partner-logo">
+          <img src="images/Logo-Cliente-6.png" alt="Logo Cliente 6" class="partner-logo">
       </div>
   </div>
 </section>
