--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
   <p>KREO IA Studio © 2025 | Todos los derechos reservados</p>
   <!-- Línea añadida -->
   <p>Ficción IA: arte, sátira y humor. Parecido a la realidad es coincidencia.</p>
+  <p>Visítanos en Tiktok</p>
+  <a href="https://www.tiktok.com/@kreo_ai_studio" target="_blank" rel="noopener noreferrer">
+    <img src="images/tiktok-icon.png" alt="TikTok" width="24" height="24">
+  </a>
 </footer>
 
 <script>
