--- a/index.html
+++ b/index.html
@@ -322,11 +322,7 @@
         <img src="images/img4.jpg" alt="Ejemplo de proyecto KREO IA Studio 4" width="600" height="400" loading="lazy">
         <img src="images/img5.jpg" alt="Ejemplo de proyecto KREO IA Studio 5" width="600" height="400" loading="lazy">
         <img src="images/img6.jpg" alt="Ejemplo de proyecto KREO IA Studio 6" width="600" height="400" loading="lazy">
-        <video src="videos/vid7.mp4" 
-         muted playsinline controls preload="none" 
-         poster="images/img7.jpg" alt="Proyecto 2">
-    Tu navegador no soporta video HTML5.
-  </video>
+        <img src="images/img7.jpg" alt="Ejemplo de proyecto KREO IA Studio 7" width="600" height="400" loading="lazy">
         <img src="images/img8.jpg" alt="Ejemplo de proyecto KREO IA Studio 8" width="600" height="400" loading="lazy">
         <img src="images/img9.jpg" alt="Ejemplo de proyecto KREO IA Studio 9" width="600" height="400" loading="lazy">
         <!-- Perf Note: Considerar usar <picture> para formatos WebP/AVIF con fallback a JPG -->
