--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ document.addEventListener('DOMContentLoaded', () => {
   } else { console.warn("IntersectionObserver not supported."); revealElements.forEach(el => el.classList.add('visible')); document.querySelectorAll('.fade-in').forEach(el => el.classList.add('visible')); }
 
   // --- GRUPO: Lógica de Login (Asesor Legal) ---
-  const validCredentials = { "KOKO2025": "2025KOKO", "otro_cliente": "kreo_acceso" };
+  const validCredentials = { "coco2025": "2025coco", "otro_cliente": "kreo_acceso" };
   const asesorLink = document.getElementById('asesor-link'); const loginModal = document.getElementById('login-modal');
   const closeModalButton = document.getElementById('close-login-modal'); const loginForm = document.getElementById('login-form');
   const usernameInput = document.getElementById('username'); const passwordInput = document.getElementById('password');
